syntax = "proto2";
package proto;


import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.goproto_enum_prefix_all) = true;


message udpMsg {
  optional int32  cmd       = 1;
  optional int64  context   = 2;  
  optional string addr      = 3;
  optional bytes  data      = 4;
}


